# rust-indexeddb-playground

./: Cargo.toml  index.js
src/: lib.rs
