[package]
name = "rust-indexeddb-playground"
version = "0.1.0"
authors = ["Rüdiger Klaehn"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
indexed_db_futures = { git = "https://github.com/rklaehn/rust-indexed-db", features = ["cursors"] }
blake2b_simd = "1.0.0"
wasm-bindgen = "0.2.78"
wasm-bindgen-futures = "0.4.28"
web-sys = { version = "0.3.55", features = ['console', 'Blob', 'IdbIndex', 'IdbObjectStore'] }
radixtree = { path = "../radixtree" }
hex = "0.4.3"
futures = "0.3.18"
anyhow = "1.0.51"
